[gd_scene load_steps=6 format=2]

[ext_resource path="res://player/crosshair.svg" type="Texture" id=1]
[ext_resource path="res://menu/theme/theme.tres" type="Theme" id=2]
[ext_resource path="res://menu/options/options.tscn" type="PackedScene" id=3]
[ext_resource path="res://menu/ingame/pause_menu.gd" type="Script" id=4]
[ext_resource path="res://menu/button.png" type="Texture" id=5]

[node name="PauseMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Crosshair" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Crosshair"]
margin_left = 784.0
margin_top = 434.0
margin_right = 816.0
margin_bottom = 466.0
texture = ExtResource( 1 )

[node name="Pause" type="VBoxContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonHolder" type="HBoxContainer" parent="Pause"]
margin_right = 1600.0
margin_bottom = 900.0
size_flags_vertical = 3
alignment = 1

[node name="MainButtons" type="VBoxContainer" parent="Pause/ButtonHolder"]
margin_left = 608.0
margin_right = 992.0
margin_bottom = 900.0
custom_constants/separation = 20
alignment = 1

[node name="Resume" type="TextureButton" parent="Pause/ButtonHolder/MainButtons"]
margin_top = 292.0
margin_right = 384.0
margin_bottom = 356.0
rect_min_size = Vector2( 384, 64 )
texture_normal = ExtResource( 5 )

[node name="Label" type="Label" parent="Pause/ButtonHolder/MainButtons/Resume"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.0
margin_bottom = -18.0
text = "Resume Game"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="TextureButton" parent="Pause/ButtonHolder/MainButtons"]
margin_top = 376.0
margin_right = 384.0
margin_bottom = 440.0
rect_min_size = Vector2( 384, 64 )
texture_normal = ExtResource( 5 )

[node name="Label" type="Label" parent="Pause/ButtonHolder/MainButtons/Options"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.0
margin_bottom = -18.0
text = "Options"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="TextureButton" parent="Pause/ButtonHolder/MainButtons"]
margin_top = 460.0
margin_right = 384.0
margin_bottom = 524.0
rect_min_size = Vector2( 384, 64 )
texture_normal = ExtResource( 5 )

[node name="Label" type="Label" parent="Pause/ButtonHolder/MainButtons/MainMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.0
margin_bottom = -18.0
text = "Main Menu"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="TextureButton" parent="Pause/ButtonHolder/MainButtons"]
margin_top = 544.0
margin_right = 384.0
margin_bottom = 608.0
rect_min_size = Vector2( 384, 64 )
texture_normal = ExtResource( 5 )

[node name="Label" type="Label" parent="Pause/ButtonHolder/MainButtons/Exit"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.0
margin_bottom = -18.0
text = "Exit Game"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" parent="." instance=ExtResource( 3 )]
[connection signal="pressed" from="Pause/ButtonHolder/MainButtons/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="Pause/ButtonHolder/MainButtons/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Pause/ButtonHolder/MainButtons/MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="pressed" from="Pause/ButtonHolder/MainButtons/Exit" to="." method="_on_Exit_pressed"]
